--- a/kuti-social/Base.lproj/Main.storyboard
+++ b/kuti-social/Base.lproj/Main.storyboard
@@ -6,6 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -20,11 +21,113 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="NRP-9h-SQe">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="130"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="devslopes-logo" translatesAutoresizingMaskIntoConstraints="NO" id="4zg-LF-otj">
+                                        <rect key="frame" x="112.5" y="18" width="150" height="94"/>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.73725490196078436" blue="0.83137254901960778" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstItem="4zg-LF-otj" firstAttribute="centerX" secondItem="NRP-9h-SQe" secondAttribute="centerX" id="7PH-XE-4lj"/>
+                                    <constraint firstAttribute="height" constant="130" id="cpf-xR-8ej"/>
+                                    <constraint firstItem="4zg-LF-otj" firstAttribute="centerY" secondItem="NRP-9h-SQe" secondAttribute="centerY" id="uUP-cg-GZo"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ygE-Za-neY">
+                                <rect key="frame" x="0.0" y="592" width="375" height="75"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="If you haven't signed in before, an account will be automatically created for you" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="4" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="hjk-0T-YG2">
+                                        <rect key="frame" x="8" y="8" width="359" height="59"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.0" green="0.51372549019607838" blue="0.5607843137254902" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="trailing" secondItem="hjk-0T-YG2" secondAttribute="trailing" constant="8" id="9ZL-BR-UTj"/>
+                                    <constraint firstAttribute="height" constant="75" id="QXV-PA-dcu"/>
+                                    <constraint firstAttribute="bottom" secondItem="hjk-0T-YG2" secondAttribute="bottom" constant="8" id="S5R-Xg-oSm"/>
+                                    <constraint firstItem="hjk-0T-YG2" firstAttribute="leading" secondItem="ygE-Za-neY" secondAttribute="leading" constant="8" id="YRL-KH-yVy"/>
+                                    <constraint firstItem="hjk-0T-YG2" firstAttribute="top" secondItem="ygE-Za-neY" secondAttribute="top" constant="8" id="YhN-F2-Z93"/>
+                                </constraints>
+                            </view>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Choose a sign in method" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ay3-gg-dr9">
+                                <rect key="frame" x="16" y="145" width="343" height="20"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="20" id="a9a-Xf-vqv"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="15"/>
+                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="8hr-sW-iYY">
+                                <rect key="frame" x="137.5" y="180" width="100" height="100"/>
+                                <color key="backgroundColor" red="0.28356209397315979" green="0.39960905909538269" blue="0.66674113273620605" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="100" id="Iff-Be-Dvf"/>
+                                    <constraint firstAttribute="width" constant="100" id="b6U-hq-Llz"/>
+                                </constraints>
+                                <state key="normal" image="f">
+                                    <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                            </button>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="XIE-6Q-peb">
+                                <rect key="frame" x="46" y="315" width="283" height="129"/>
+                                <subviews>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email Address" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="x67-Tx-26w">
+                                        <rect key="frame" x="0.0" y="0.0" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Z3y-UD-xrl">
+                                        <rect key="frame" x="0.0" y="46" width="283" height="30"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                    </textField>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dC7-0e-YPt">
+                                        <rect key="frame" x="0.0" y="92" width="283" height="37"/>
+                                        <color key="backgroundColor" red="0.8666666666666667" green="0.17254901960784313" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="displayP3"/>
+                                        <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
+                                        <state key="normal" title="Sign In">
+                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                        </state>
+                                    </button>
+                                </subviews>
+                            </stackView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="XIE-6Q-peb" firstAttribute="top" secondItem="8hr-sW-iYY" secondAttribute="bottom" constant="35" id="4uk-pY-VsM"/>
+                            <constraint firstItem="NRP-9h-SQe" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="Aff-cS-u9R"/>
+                            <constraint firstItem="XIE-6Q-peb" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="30" id="B6F-KD-q8h"/>
+                            <constraint firstItem="Ay3-gg-dr9" firstAttribute="top" secondItem="NRP-9h-SQe" secondAttribute="bottom" constant="15" id="DOW-1J-U27"/>
+                            <constraint firstItem="8hr-sW-iYY" firstAttribute="top" secondItem="Ay3-gg-dr9" secondAttribute="bottom" constant="15" id="EEb-IY-TEl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Ay3-gg-dr9" secondAttribute="trailing" id="IeL-iu-L98"/>
+                            <constraint firstAttribute="trailing" secondItem="NRP-9h-SQe" secondAttribute="trailing" id="JGR-cq-lPi"/>
+                            <constraint firstItem="8hr-sW-iYY" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="Rh7-Ov-scM"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="XIE-6Q-peb" secondAttribute="trailing" constant="30" id="Zeo-Ef-T72"/>
+                            <constraint firstItem="XIE-6Q-peb" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="dd0-9K-hJk"/>
+                            <constraint firstItem="NRP-9h-SQe" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hVE-mP-aot"/>
+                            <constraint firstItem="ygE-Za-neY" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="iJb-5W-Mfn"/>
+                            <constraint firstAttribute="trailing" secondItem="ygE-Za-neY" secondAttribute="trailing" id="r51-aJ-OFu"/>
+                            <constraint firstItem="Ay3-gg-dr9" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" id="sab-mT-r9z"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ygE-Za-neY" secondAttribute="bottom" id="zlv-c5-xMv"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="113" y="172"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="devslopes-logo" width="150" height="94"/>
+        <image name="f" width="352" height="328"/>
+    </resources>
 </document>
