--- a/kuti-social/Base.lproj/Main.storyboard
+++ b/kuti-social/Base.lproj/Main.storyboard
@@ -74,6 +74,9 @@
                                 <state key="normal" image="f">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="facebookBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="qAf-mO-kdr"/>
+                                </connections>
                             </button>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="16" translatesAutoresizingMaskIntoConstraints="NO" id="XIE-6Q-peb">
                                 <rect key="frame" x="46" y="340" width="283" height="119"/>
