--- a/kuti-social/Base.lproj/Main.storyboard
+++ b/kuti-social/Base.lproj/Main.storyboard
@@ -91,7 +91,7 @@
                                         <rect key="frame" x="0.0" y="41" width="283" height="25"/>
                                         <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.87" colorSpace="custom" customColorSpace="displayP3"/>
                                         <fontDescription key="fontDescription" name="AvenirNext-Regular" family="Avenir Next" pointSize="18"/>
-                                        <textInputTraits key="textInputTraits"/>
+                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                     </textField>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dC7-0e-YPt" customClass="FancySignInBtn" customModule="kuti_social" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="82" width="283" height="37"/>
@@ -100,6 +100,9 @@
                                         <state key="normal" title="Sign In">
                                             <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                         </state>
+                                        <connections>
+                                            <action selector="emailSignInBtnTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Egc-Na-Irl"/>
+                                        </connections>
                                     </button>
                                 </subviews>
                             </stackView>
@@ -123,6 +126,10 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="ygE-Za-neY" secondAttribute="bottom" id="zlv-c5-xMv"/>
                         </constraints>
                     </view>
+                    <connections>
+                        <outlet property="emailTxtFld" destination="x67-Tx-26w" id="mf6-dH-LtP"/>
+                        <outlet property="passwordTxtField" destination="Z3y-UD-xrl" id="R7P-O7-vO6"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
