--- a/kuti-social/Base.lproj/Main.storyboard
+++ b/kuti-social/Base.lproj/Main.storyboard
@@ -271,7 +271,7 @@
                                                                         </imageView>
                                                                     </subviews>
                                                                 </stackView>
-                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="vLj-cw-fzQ">
+                                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="placeholder" translatesAutoresizingMaskIntoConstraints="NO" id="vLj-cw-fzQ">
                                                                     <rect key="frame" x="0.0" y="68" width="327" height="224"/>
                                                                 </imageView>
                                                                 <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" text="Monkey in jelly '85" textAlignment="natural" translatesAutoresizingMaskIntoConstraints="NO" id="bbU-qc-5IT">
